feat: update password on update profile endpoint
