# packages/monolith-sample/server/src/modules/users/dtos/IUpdateUserDTO.ts
@@ -2,4 +2,6 @@ export interface IUpdateUserDTO {
   id: string;
   email?: string;
   name?: string;
+  currentPassword?: string;
+  password?: string;
 }
